--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	</section>
 	<section id="section-e">
 		<div class="box-7">
-			<li><a href="">Works Cited</a></li>
+			<li><a href="../STPA/sources/sources.html">Works Cited</a></li>
 		</div>
 		<div class="box-8">
 			<li><a href=""> Work Log</a></li>
