--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
 			</ul>
 </div>
 			</header>
-	
+	<header id="showcase">
+
+		<h1></h1>
+
+		<p> </p>
+
+		<a href="#" class="button">Learn more</a>
+
+	</header>
 	<section id="section-a">
 
 	</section>
