--- a/Uses of Cloud Computing/uses3.html
+++ b/Uses of Cloud Computing/uses3.html
@@ -14,7 +14,7 @@
 		<div id="navbar">
 		<header id="navbar">
 		<ul id="nav">
-		<li> <a href="../Home Page/homepage3.html">Home</a></li>
+		<li> <a href="../Home Page/index.html">Home</a></li>
 		<li> <a href="../challenges page/challenges of cloud2.html"> The Challenges</a></li>
 		<li> <a href="../Benefits Page/benefits cloud.html">The Benefits</a></li>
 		<li> <a href="../Liabilities/liabilities.html">The Liabilities</a></li>
@@ -42,7 +42,7 @@
 </p>
 
 		<footer>
-		<li> <a href="../Home Page/homepage3.html"> Home</a></li>
+		<li> <a href="../Home Page/index.html"> Home</a></li>
 		<li> <a href="../challenges page/challenges of cloud2.html"> The Challenges</a></li>
 		<li> <a href="../Benefits Page/benefits cloud.html">The Benefits</a></li>
 		<li> <a href="../Liabilities/liabilities.html">The Liabilities</a></li>
