--- a/liabilities.html
+++ b/liabilities.html
@@ -11,7 +11,7 @@
 <div id="navbar">
 		<header id="navbar">
 	 <ul id="nav">
-		<li> <a href="../Home Page/homepage3.html">Home</a></li>
+		<li> <a href="../Home Page/index.html"">Home</a></li>
 		<li> <a href="../challenges page/challenges of cloud2.html"> The Challenges</a></li>
 		<li> <a href="../Benefits Page/benefits cloud.html">The Benefits</a></li>
 		<li> <a href="../Liabilities/liabilities.html">The Liabilities</a></li>
@@ -51,7 +51,7 @@
 
 	<footer>
 
-		<li> <a href="../Home Page/homepage3.html"> Home</a></li>
+		<li> <a href="../Home Page/index.html"> Home</a></li>
 		<li> <a href="../challenges page/challenges of cloud2.html"> The Challenges</a></li>
 		<li> <a href="../Benefits Page/benefits cloud.html">The Benefits</a></li>
 		<li> <a href="../Liabilities/liabilities.html">The Liabilities</a></li>
