Update challenges of cloud2.html

--- a/challenges of cloud2.html
+++ b/challenges of cloud2.html
@@ -10,7 +10,7 @@
 		<div id="navbar">
 		<header id="navbar">
 	 <ul id="nav">
-		<li> <a href="../Home Page/homepage3.html">Home</a></li>
+		<li> <a href="../Home Page/index.html">Home</a></li>
 		<li> <a href="../challenges page/challenges of cloud2.html"> The Challenges</a></li>
 		<li> <a href="../Benefits Page/benefits cloud.html">The Benefits</a></li>
 		<li> <a href="../Liabilities/liabilities.html">The Liabilities</a></li>
@@ -54,7 +54,7 @@
 	</section>
 	
 	<footer>
-		<li> <a href="../Home Page/homepage3.html"> Home</a></li>
+		<li> <a href="../Home Page/index.html"> Home</a></li>
 		<li> <a href="../challenges page/challenges of cloud2.html"> The Challenges</a></li>
 		<li> <a href="../Benefits Page/benefits cloud.html">The Benefits</a></li>
 		<li> <a href="../Liabilities/liabilities.html">The Liabilities</a></li>
