--- a/STPA/Home Page/index.html
+++ b/STPA/Home Page/index.html
@@ -28,7 +28,7 @@
 
 	 <ul id="nav">
 
-		<li> <a href="../Home Page/homepage3.html">Home</a></li>
+		<li> <a href="../Home Page/index.html">Home</a></li>
 
 		<li> <a href="../challenges page/challenges of cloud2.html"> The Challenges</a></li>
 
