--- a/STPA/Home Page/index.html
+++ b/STPA/Home Page/index.html
@@ -115,6 +115,7 @@
 		<div class="box-4">
 
 			<li><a href="../Uses of Cloud Computing/uses3.html"> Uses</a></li>
+			img url:("ACTUAL BACKGROUND THE END.jpg");
 
 		</div>
 
