--- a/STPA/Home Page/index.html
+++ b/STPA/Home Page/index.html
@@ -115,7 +115,7 @@
 		<div class="box-4">
 
 			<li><a href="../Uses of Cloud Computing/uses3.html"> Uses</a></li>
-			<img src="ACTUAL CLOUD BACKGROUND THE END.jpg">
+			<img src="../ACTUAL CLOUD BACKGROUND THE END.jpg">
 
 		</div>
 
