--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	
 	</section>
 	<section id="section-d">
-		<div class="box-4">
+		<div class="box-4 "style="background-color:powderblue;>
 			<li><a href="../STPA/Uses of Cloud Computing/uses3.html"> Uses</a></li>
 		</div>
 		<div class="box-5">
