--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 		
 	
 	</section>
-	<section id="section-d">
-		<div class="box-4 "style="background-color:powderblue;>
+	<section id="section-d" bgcolor= "#295D9B">
+		<div class="box-4>
 			<li><a href="../STPA/Uses of Cloud Computing/uses3.html"> Uses</a></li>
+										
 		</div>
 		<div class="box-5">
 			<li><a href="../STPA/The Team/team.html"> Meet the Team</a></li>
