--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="navbar">
 		<header id="navbar">
 	 <ul id="nav">
-		<li> <a href="https://stpatsa.github.io">Home</a></li>
+		<li> <a href="../Home Page/index.html">Home</a></li>
 		<li> <a href="../STPA/challenges page/challenges of cloud2.html"> The Challenges</a></li>
 		<li> <a href="../STPA/Benefits Page/benefits cloud.html">The Benefits</a></li>
 		<li> <a href="../STPA/Liabilities/liabilities.html">The Liabilities</a></li>
