--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		
 	
 	</section>
-	<section id="section-d" bgcolor= "#295D9B">
+	<section id="section-d">
 		<div class="box-4>
 			<li><a href="../STPA/Uses of Cloud Computing/uses3.html"> Uses</a></li>
 										
