--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 	</div><div class="box-3">
 		<li><a href="../STPA/Liabilities/liabilities.html"> Liabilities</a></li>
 	</div>
-		
-	
+	<div class="box-4">
+		<li><a href="../STPA/Uses of Cloud Computing/uses3.html"> Uses</a></li>
+		</div>
 	</section>
 		<div class="box-5">
 			<li><a href="../STPA/The Team/team.html"> Meet the Team</a></li>
