--- a/STPA/Home Page/index.html
+++ b/STPA/Home Page/index.html
@@ -137,13 +137,13 @@
 
 		<div class="box-7">
 
-			<li><a href="">Works Cited</a></li>
+			<li><a href="../sources/sources.html">Works Cited</a></li>
 
 		</div>
 
 		<div class="box-8">
 
-			<li><a href=""> Work Log</a></li>
+			<li><a href="../Pictures used in website/Scanned from a Xerox Multifunction Printer.pdf"> Work Log</a></li>
 
 			
 
