--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<li><a href="../STPA/sources/sources.html">Works Cited</a></li>
 		</div>
 		<div class="box-8">
-			<li><a href=""> Work Log</a></li>
+			<li><a href="../Pictures used in website/Scanned from a Xerox Multifunction Printer.pdf"> Work Log</a></li>
 			
 		</div>
 	</section>
